GRNOC::WebService::Client v1.5.0-2 -- Thu Sep 14 2017
===================================================

Bug Fixes:
 * ISSUE=3222 PROJ=160 Require https support on el7


GRNOC::WebService::Client v1.5.0 -- Fri Aug 18 2017
===================================================
New Features:
 * ISSUE=1002 PROJ=168 Support for Shibboleth ECP.

GRNOC::WebService::Client v1.4.1 -- Fri Mar 17 2017
====================================================
Bug Fixes:
    *PULLREQ=5 Adds ability to ignore missing or self-signed ssl certs.

GRNOC::WebService::Client v1.4.0 -- Tue Nov 29 2016
====================================================
New Featues:
    *ISSUE=2804 PROJ=161 Adding ability to retry webservice requests on given HTTP status codes


GRNOC::WebService::Client v1.3.3 -- Wed Oct 5 2016
===================================================

Bug Fixes:
 * ISSUE=2171 PROJ=160 Clear error state between subsequent calls to avoid cases where
error state would persist after a transient problem.


GRNOC::WebService::Client v1.3.2 -- Tue Jun 02 2015
===================================================

Features:
 * ISSUE=11086 Webservice Client instances will now automatically save their cookies if applicable after any successful
request is made instead of relying on code to make an explicit call. This is similar to prior behavior that
was lost when a thread-safe change was made to the saving mechanism.
 * ISSUE=10952 Improved error messages when failing to handle URNs.

Bug Fixes:
 * ISSUE=11282 Webservice Clients will now properly choose a random URL when given multiple equally weighted URLs 
instead of always choosing the first, ensuring a RR behavior for equal weighted URLs.


GRNOC::WebService::Client v1.3.1 -- Fri May 09 2014
===================================================

Bug Fixes:
 * ISSUE=8594 Fixed issue where in multithreaded or multiprocess environments
a shared cookie jar would sometimes fail to function properly causing redundant
logins.