@@ -1,6 +1,6 @@
 Name:           perl-GRNOC-WebService-Client
-Version:        1.5.0
-Release:        2%{?dist}
+Version:        1.5.1
+Release:        1%{?dist}
 Summary:        GRNOC::WebService::Client Perl module
 License:        GRNOC
 Group:          Development/Libraries
@@ -45,10 +45,12 @@ rm -rf $RPM_BUILD_ROOT
 %{__install} -d -p %{buildroot}%{perl_sitelib}/GRNOC/WebService/
 %{__install} -d -p %{buildroot}%{perl_sitelib}/GRNOC/WebService/Client/
 %{__install} -d -p %{buildroot}/usr/bin/globalnoc/webservice/
+%{__install} -d -p %{buildroot}/etc/grnoc/webservice_client/
 
 %{__install} lib/GRNOC/WebService/Client.pm %{buildroot}%{perl_sitelib}/GRNOC/WebService/
 %{__install} lib/GRNOC/WebService/Client/Paginator.pm %{buildroot}%{perl_sitelib}/GRNOC/WebService/Client/
 %{__install} bin/wsutil.pl %{buildroot}/usr/bin/globalnoc/webservice/
+%{__install} conf/config.xml %{buildroot}/etc/grnoc/webservice_client/config.xml
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -65,7 +67,7 @@ fi
 %{perl_sitelib}/GRNOC/WebService/Client.pm
 %{perl_sitelib}/GRNOC/WebService/Client/Paginator.pm
 /usr/bin/globalnoc/webservice/wsutil.pl
-
+%config(noreplace) /etc/grnoc/webservice_client/config.xml
 %changelog
 * Mon Jun 13 2011 mrmccrac 1.1.0-1
 - Specfile autogenerated by cpanspec 1.77.
