@@ -1,3 +1,8 @@
+GRNOC::WebService::Client v1.5.1 -- Thu Apr 26 2018
+===================================================
+
+  *ISSUE=6579 PROJ=168 Support for default realm
+
 GRNOC::WebService::Client v1.5.0-2 -- Thu Sep 14 2017
 ===================================================
 
